minor bug fixes to allow text wrap

--- a/src/style.css
+++ b/src/style.css
@@ -167,7 +167,8 @@ section {
 }
 
 .task-description {
-  position: absolute;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .task .controlBtn {
